force-app/src/objects/OrderApi__Payment_Gateway__c.object
<CustomObject>
    <description>Payment gateways store configuration data for all connected Fonteva payment gateways in your organization.</description>
    <fields>
        <fullName>OneClick__Is_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__AVS_Configuration__c</fullName>
        <description>AVS fields that are required when a payment is made.</description>
        <inlineHelpText>AVS fields that are required when a payment is made.</inlineHelpText>
        <label>AVS Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validate Billing Address</fullName>
                </value>
                <value>
                    <fullName>Validate Postal Code</fullName>
                </value>
                <value>
                    <fullName>Disable AVS</fullName>
                    <default>true</default>
                    <label>Disable AVS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Attempt_3DS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, 3D Secure will be enabled for the related payment gateway. Displayed only if a payment gateway supports
            3D Secure.</description>
        <inlineHelpText>When selected, 3D Secure will be enabled for the related payment gateway. Displayed only if a payment gateway supports
            3D Secure.</inlineHelpText>
        <label>Enable 3D Secure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** Link to the related business group.</description>
        <inlineHelpText>**Required** Link to the related business group.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Payment Gateways</relationshipLabel>
        <relationshipName>Payment_Gateways</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Company_Name__c</fullName>
        <description>The name of the payment gateway company.</description>
        <inlineHelpText>The name of the payment gateway company.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deposit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related GL Account to use for the Deposit Account.</description>
        <inlineHelpText>Link to related GL Account to use for the Deposit Account.</inlineHelpText>
        <label>Deposit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Payment Gateways</relationshipLabel>
        <relationshipName>Payment_Gateways</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_AVS_Zip_Code_Only__c</fullName>
        <description>**System Caluclated** specifies whether to verify zip code on payment or not</description>
        <formula>ISPICKVAL( OrderApi__AVS_Configuration__c , &apos;Validate Postal Code&apos;)</formula>
        <inlineHelpText>**System Caluclated** specifies whether to verify zip code on payment or not</inlineHelpText>
        <label>Enable AVS Zip Code Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_AVS__c</fullName>
        <description>**System Caluclated** Checked if AVS is enabled</description>
        <formula>ISPICKVAL(OrderApi__AVS_Configuration__c, &apos;Validate Billing Address&apos;)</formula>
        <inlineHelpText>**System Caluclated** Checked if AVS is enabled</inlineHelpText>
        <label>Enable AVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Gateway_Specific_Fields__c</fullName>
        <description>Gateway specific fields to send part of every transaction.</description>
        <inlineHelpText>Gateway specific fields to send part of every transaction.</inlineHelpText>
        <label>SYSTEM</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Gateway_Type__c</fullName>
        <description>**System Calculated** The type of gateway used by the business group for credit card and e-check processing (not supported for all customers, check with your administrator if you have any questions).</description>
        <inlineHelpText>**System Calculated** The type of gateway used by the business group for credit card and e-check processing (not supported for all customers, check with your administrator if you have any questions).</inlineHelpText>
        <label>Gateway Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Homepage__c</fullName>
        <description>The url for the payment gateway company website.</description>
        <inlineHelpText>The url for the payment gateway company website.</inlineHelpText>
        <label>Homepage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The gateway is enabled for payment processing.</description>
        <inlineHelpText>The gateway is enabled for payment processing.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Offsite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** -  When a payment gateway is an offsite payment gateway.</description>
        <inlineHelpText>**System Calculated** -  When a payment gateway is an offsite payment gateway.</inlineHelpText>
        <label>Is Offsite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The gateway is a test gateway and not to be used for production environments.</description>
        <inlineHelpText>The gateway is a test gateway and not to be used for production environments.</inlineHelpText>
        <label>Is Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Post_Orders_in_Procesing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the offsite payment which have not been funded yet will be posted.</description>
        <inlineHelpText>If selected, the offsite payment which have not been funded yet will be posted.</inlineHelpText>
        <label>Post Orders in Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Pre_Authorization_Purchases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** True if the gateway supports pre-authorization purchases.</description>
        <inlineHelpText>**System Calculated** True if the gateway supports pre-authorization purchases.</inlineHelpText>
        <label>Supports Pre-Authorization Purchases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_CVV__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this field will require the card&apos;s verification value (CVV) at the time of payment.</description>
        <inlineHelpText>Checking this field will require the card&apos;s verification value (CVV) at the time of payment.</inlineHelpText>
        <label>Require CVV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires a valid email when executing a payment</description>
        <inlineHelpText>Requires a valid email when executing a payment</inlineHelpText>
        <label>Require Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires a valid phone when executing a payment</description>
        <inlineHelpText>Requires a valid phone when executing a payment</inlineHelpText>
        <label>Require Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__State__c</fullName>
        <description>** System Calculated ** The current state of the payment gateway connection.</description>
        <inlineHelpText>** System Calculated ** The current state of the payment gateway connection.</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supported_Countries__c</fullName>
        <description>** System Calculated ** Full list of supported countries for the Payment Gateway.</description>
        <inlineHelpText>** System Calculated ** Full list of supported countries for the Payment Gateway.</inlineHelpText>
        <label>Supported Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supported_Credit_Cards_Image__c</fullName>
        <description>Image URL to show the supported credit cards for gateway.</description>
        <inlineHelpText>Image URL to show the supported credit cards for gateway.</inlineHelpText>
        <label>Supported Credit Cards Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supported_Regions__c</fullName>
        <description>The payment gateway&apos;s supported geographic regions.</description>
        <inlineHelpText>The payment gateway&apos;s supported geographic regions.</inlineHelpText>
        <label>Supported Regions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_3DS_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field that indicates the related payment gateway supports 3DS purchases.</description>
        <inlineHelpText>System field that indicates the related payment gateway supports 3DS purchases.</inlineHelpText>
        <label>Supports 3DS Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Authorize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Gateway supports credit card authorizations.</description>
        <inlineHelpText>**System Calculated** Gateway supports credit card authorizations.</inlineHelpText>
        <label>Supports Authorize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Capture__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Gateway supports credit card capture.</description>
        <inlineHelpText>**System Calculated** Gateway supports credit card capture.</inlineHelpText>
        <label>Supports Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Credit_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Gateway will be enabled for credit card payment processing.</description>
        <inlineHelpText>When checked, the Gateway will be enabled for credit card payment processing.</inlineHelpText>
        <label>Supports Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Gateway supports credit transactions. A credit is like a void, except it actually reverses a charge instead of just canceling a charge that hasn’t yet been made.</description>
        <inlineHelpText>**System Calculated** Gateway supports credit transactions. A credit is like a void, except it actually reverses a charge instead of just canceling a charge that hasn’t yet been made.</inlineHelpText>
        <label>Supports Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_EFT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked when the configured gateway supports EFT (Electronic Funds Transfer)</description>
        <inlineHelpText>**System Calculated** Checked when the configured gateway supports EFT (Electronic Funds Transfer)</inlineHelpText>
        <label>Supports EFT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Offsite_Authorize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** - When an offsite payment gateway supports Authorize</description>
        <inlineHelpText>**System Calculated** - When an offsite payment gateway supports Authorize</inlineHelpText>
        <label>Supports Offsite Authorize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Verify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The payment gateway supports a verification only transaction that does not result in any charge to the customer.</description>
        <inlineHelpText>The payment gateway supports a verification only transaction that does not result in any charge to the customer.</inlineHelpText>
        <label>Supports Verify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Gateway supports ability to void transactions.</description>
        <inlineHelpText>**System Calculated** Gateway supports ability to void transactions.</inlineHelpText>
        <label>Supports Void</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Supports_eCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Gateway will be enabled for eCheck (EFT/ACH/Direct Debit) processing.</description>
        <inlineHelpText>When checked, the Gateway will be enabled for eCheck (EFT/ACH/Direct Debit) processing.</inlineHelpText>
        <label>Supports eCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Token__c</fullName>
        <description>**System Calculated/Override** The token used by the business group to process credit card and e-checks (not supported for all customers, check with your administrator if you have any questions).</description>
        <inlineHelpText>**System Calculated/Override** The token used by the business group to process credit card and e-checks (not supported for all customers, check with your administrator if you have any questions).</inlineHelpText>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Use_Offsite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the related payment gateway will use the offsite payment method. Displayed only if a payment gateway is a test gateway.</description>
        <inlineHelpText>When selected, the related payment gateway will use the offsite payment method. Displayed only if a payment gateway is a test gateway.</inlineHelpText>
        <label>Enable Offsite</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Gateway</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Token__c</columns>
        <columns>OrderApi__Supports_Authorize__c</columns>
        <columns>OrderApi__Supports_Capture__c</columns>
        <columns>OrderApi__Supports_Credit__c</columns>
        <columns>OrderApi__Supports_Void__c</columns>
        <columns>OrderApi__Is_Test__c</columns>
        <columns>OrderApi__Is_Enabled__c</columns>
        <columns>OrderApi__Require_Email__c</columns>
        <columns>OrderApi__Require_Phone__c</columns>
        <columns>OrderApi__AVS_Configuration__c</columns>
        <columns>OrderApi__Require_CVV__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Gateway Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Gateways</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>